tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_case_label_pure.objc3
module MisplacedQualifierCaseLabelPure;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case pure:
      return 1;
    default:
      return 0;
  }
}